# App

./: .env.example  .gitignore  Instal_and_push.sh  Install_and_push.sh  Launcher.command  PROJECT_BLUEPRINT.md  SIM.py  XFORGE.spec  XForge.icns  app.py  config.json  dashboard.py  file.sh  fix.sh  fix_all.sh  fix_all_modules.py  fix_gradio.sh  fix_repo.sh  installer.sh  launch.command  launcher.py  live_dashboard.py  memory.txt  package_standalone.py  pyproject.toml  quant_historical.db  quick_fix.py  repair.py  requirements.txt  rescue.py  rescue_fixed.py  restructure.py  setup.py  stock_historical.db  upgrade_to_app.py  xforge_historical.db  xforge_historical_db.py  xforge_main.py  xforge_trader.py
.gradio/flagged/: dataset1.csv  dataset2.csv  dataset3.csv
FORGE/: config.py  utils.py
FORGE/utils/: db_connection.py
Modules/: SIM.py  SIM.py.bak  historical_db.py  shipping.py  xforge_historical.db  xforge_trader.py
Modules/FORGE/: README.md
Modules/FORGE/utils/: logging.py
Modules/Self-Improve/: README.md  errors_export_20260509_084123.csv  improved_script_v1.py
Modules/utils/: __init__.py
Modules/xforge_trader.egg-info/: SOURCES.txt
Self-Improve/: improvements_export_20260509_084125.csv  xforge_self_improve.db
XForge_Trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backups/: app_backup_20260510_07:47:50.py
data/: historical_stock.db  stock_history.db
database/: stock_history.db  xforge_historical.db  xforge_self_improve.db
database/db_backups/: xforge_self_improve.db
xforge_trader.egg-info/: PKG-INFO  top_level.txt
(+2 files in other folders)
