[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xforge-trader"
version = "9.2.0"
description = "Self-Improving Autonomous Trading Intelligence powered by Grok (xAI)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "JeffStone69"}]
dependencies = [
    "gradio>=5.0",
    "yfinance",
    "pandas",
    "numpy",
    "pandas-ta",
    "plotly",
    "openai",
    "pydantic>=2.0",
    "requests",
    "tenacity",
    "ib_insync",
    "python-dotenv",
    "tweepy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "black",
]

[project.scripts]
xforge = "launcher:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["FORGE*", "modules*", "sim*", "utils*", "config*"]

# ====================== UV OPTIMIZATIONS ======================
[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "mypy",
    "black",
]

[tool.uv.sources]
# Pin to latest stable versions for faster resolution
gradio = { git = "https://github.com/gradio-app/gradio.git", rev = "main" }

# ====================== LINTERS & FORMATTERS ======================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.black]
line-length = 100
target-version = ['py310']
